--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript </title>
-    <script src="./arrays/spread.js"></script>
+    <script src="./arrays/foreach.js"></script>
 </head>
 <body>
     <h1>DEV APRENDER</h1>
