--- a/segurança.html
+++ b/segurança.html
@@ -5,25 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segurança Virtual</title>
-    <script src="./simple_comand/input.js"></script>
+    <script src="./mini-project/project1.js"></script>
 </head>
 <body>
     <h1> FESTA VIP</h1>
     <h2> Bem vindo a festa senhor(a):</h2>
-    <div class="nome">
-        <form action="#">
-            <input type="text" name="serach" id="nome" placeholder="Coloque seu nome">
-        </form>
-    </div>
-    <h2>
-        Quem te convidou para essa festa?
-    </h2>
-    <div class="seguranca">
-        <form action="#">
-            <input type="text" name="segura" id="segura" placeholder="Quem te convidou?">
-            <button type="submit"> Verificar </button>
-        </form>
-    </div>
+    <input type="text" id="nome" placeholder="Coloque seu nome">
+    <h2>Quem te convidou para essa festa?</h2>
+    <input type="text" id="convidadoPor" placeholder="Quem te convidou?">
+    <button onclick="VerificaEntrada()"> Verificar </button>
     <h3> Verificando se você pode entrar:</h3>
+    <label for="" id="PermissaoDeEntrada">Verificando...</label>
 </body>
 </html>
